Issue #26194: Fix undefined behavior for deque.insert() when len(d) == maxlen