Modules/_collectionsmodule.c
@@ -973,10 +973,17 @@ deque_insert(dequeobject *deque, PyObject *args)
     Py_ssize_t index;
     Py_ssize_t n = Py_SIZE(deque);
     PyObject *value;
+    PyObject *oldvalue;
     PyObject *rv;
 
     if (!PyArg_ParseTuple(args, "nO:insert", &index, &value))
         return NULL;
+    if (deque->maxlen == Py_SIZE(deque)) {
+        if (index >= deque->maxlen || Py_SIZE(deque) == 0)
+            Py_RETURN_NONE;
+        oldvalue = deque_pop(deque, NULL);
+        Py_DECREF(oldvalue);
+    }
     if (index >= n)
         return deque_append(deque, value);
     if (index <= -n || index == 0)
